// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`lexer bold should be deep tokenized 1`] = `
Array [
  Object {
    "indent": 0,
    "raw": "**bold with \`code\` and *italics* and ~~strikes~~ and [link](https://kiranparajuli.com.np)**",
    "type": "paragraph",
    "value": "**bold with \`code\` and *italics* and ~~strikes~~ and [link](https://kiranparajuli.com.np)**",
  },
]
`;

exports[`lexer bold should match the consecutive occurrences 1`] = `
Array [
  Object {
    "indent": 0,
    "raw": "**first bold** **second bold** **third bold**",
    "type": "paragraph",
    "value": "**first bold** **second bold** **third bold**",
  },
]
`;

exports[`lexer code should match the consecutive occurrences 1`] = `
Array [
  Object {
    "indent": 0,
    "raw": "\`first code\` \`second code\` \`third code\`",
    "type": "paragraph",
    "value": "\`first code\` \`second code\` \`third code\`",
  },
]
`;

exports[`lexer code should not be deep tokenized 1`] = `
Array [
  Object {
    "indent": 0,
    "raw": "\`code with ~ gem and **bold** and *italics* and [link](https://kiranparajuli.com.np)\`",
    "type": "paragraph",
    "value": "\`code with ~ gem and **bold** and *italics* and [link](https://kiranparajuli.com.np)\`",
  },
]
`;

exports[`lexer codeblock should be broken with wrong indent 1`] = `
Array [
  Object {
    "indent": 6,
    "raw": "      \`\`\`  abcd      \`\`\`",
    "type": "paragraph",
    "value": "      \`\`\`abcd\`\`\`",
  },
]
`;

exports[`lexer codeblock should cope with multiple items 1`] = `
Array [
  Object {
    "indent": 0,
    "language": "js",
    "type": "code-block",
    "value": "const a = 1",
  },
  Object {
    "indent": 0,
    "raw": "some people are funny",
    "type": "paragraph",
    "value": "some people are funny",
  },
]
`;

exports[`lexer codeblock should detect acceptable indent for closing codeblock 1`] = `
Array [
  Object {
    "indent": 0,
    "language": "js",
    "type": "code-block",
    "value": "const a = 1
const b = 2
const c = 3",
  },
]
`;

exports[`lexer codeblock should detect mis-indented closing codeblock 1`] = `
Array [
  Object {
    "indent": 0,
    "language": "js",
    "type": "code-block",
    "value": "const a = 1
const b = 2
const c = 3
    \`\`\`",
  },
]
`;

exports[`lexer codeblock should parse multiple consecutive codeblocks 1`] = `
Array [
  Object {
    "indent": 0,
    "language": "js",
    "type": "code-block",
    "value": "const a = 1",
  },
  Object {
    "indent": 0,
    "language": "js",
    "type": "code-block",
    "value": "const b = 2",
  },
]
`;

exports[`lexer codeblock should parse the codeblock 1`] = `
Array [
  Object {
    "indent": 0,
    "language": "js",
    "type": "code-block",
    "value": "const a = 1",
  },
]
`;

exports[`lexer codeblock should parse the codeblock with multiple lines 1`] = `
Array [
  Object {
    "indent": 0,
    "language": "js",
    "type": "code-block",
    "value": "const a = 1
const b = 2",
  },
]
`;

exports[`lexer codeblock should parse the codeblock with multiple lines and a newline 1`] = `
Array [
  Object {
    "indent": 0,
    "language": "js",
    "type": "code-block",
    "value": "const a = 1
const b = 2

const c = 3",
  },
]
`;

exports[`lexer codeblock should parse the codeblock without the language 1`] = `
Array [
  Object {
    "indent": 0,
    "language": null,
    "type": "code-block",
    "value": "const a = 1",
  },
]
`;

exports[`lexer codeblock should set incomplete codeblock as a code block 1`] = `
Array [
  Object {
    "indent": 0,
    "raw": "some line",
    "type": "paragraph",
    "value": "some line",
  },
  Object {
    "indent": 2,
    "language": "js",
    "type": "code-block",
    "value": "const a = 1
const b = 2",
  },
]
`;

exports[`lexer common tokens should parse the common tokens 1`] = `
Array [
  Object {
    "indent": 0,
    "level": 1,
    "raw": "# Heading One Text",
    "type": "heading",
    "value": "Heading One Text",
  },
]
`;

exports[`lexer common tokens should parse the common tokens 2`] = `
Array [
  Object {
    "indent": 0,
    "level": 2,
    "raw": "## Heading Two Text",
    "type": "heading",
    "value": "Heading Two Text",
  },
]
`;

exports[`lexer common tokens should parse the common tokens 3`] = `
Array [
  Object {
    "indent": 0,
    "level": 3,
    "raw": "### Heading Three Text",
    "type": "heading",
    "value": "Heading Three Text",
  },
]
`;

exports[`lexer common tokens should parse the common tokens 4`] = `
Array [
  Object {
    "indent": 0,
    "level": 4,
    "raw": "#### Heading Four Text",
    "type": "heading",
    "value": "Heading Four Text",
  },
]
`;

exports[`lexer common tokens should parse the common tokens 5`] = `
Array [
  Object {
    "indent": 0,
    "level": 5,
    "raw": "##### Heading Five Text",
    "type": "heading",
    "value": "Heading Five Text",
  },
]
`;

exports[`lexer common tokens should parse the common tokens 6`] = `
Array [
  Object {
    "indent": 0,
    "level": 6,
    "raw": "###### Heading Six Text",
    "type": "heading",
    "value": "Heading Six Text",
  },
]
`;

exports[`lexer common tokens should parse the common tokens 7`] = `
Array [
  Object {
    "indent": 0,
    "raw": "<!-- comment item text -->",
    "type": "comment",
    "value": "comment item text",
  },
]
`;

exports[`lexer common tokens should parse the common tokens 8`] = `
Array [
  Object {
    "alt": "alt text",
    "indent": 0,
    "raw": "![alt text](image.png)",
    "type": "image",
    "url": "image.png",
  },
]
`;

exports[`lexer hr line should parse the hr line 1`] = `
Array [
  Object {
    "type": "hr-line",
  },
]
`;

exports[`lexer italics should be deep tokenized 1`] = `
Array [
  Object {
    "indent": 0,
    "raw": "*italics with \`code\` and ~~strikes~~ and [link](https://kiranparajuli.com.np)*",
    "type": "paragraph",
    "value": "*italics with \`code\` and ~~strikes~~ and [link](https://kiranparajuli.com.np)*",
  },
]
`;

exports[`lexer italics should match the consecutive occurrences 1`] = `
Array [
  Object {
    "indent": 0,
    "raw": "*first italics* *second italics* *third italics*",
    "type": "paragraph",
    "value": "*first italics* *second italics* *third italics*",
  },
]
`;

exports[`lexer link should deep tokenized the link title 1`] = `
Array [
  Object {
    "indent": 0,
    "raw": "[*italic* with **bold** and \`code\`](https://kiranparajuli.com.np)",
    "type": "paragraph",
    "value": "[*italic* with **bold** and \`code\`](https://kiranparajuli.com.np)",
  },
]
`;

exports[`lexer link should match the consecutive occurrences 1`] = `
Array [
  Object {
    "indent": 0,
    "raw": "[link](https://kiranparajuli.com.np) [link](https://kiranparajuli.com.np)",
    "type": "paragraph",
    "value": "[link](https://kiranparajuli.com.np) [link](https://kiranparajuli.com.np)",
  },
]
`;

exports[`lexer list indent should break the list 1`] = `
Array [
  Object {
    "indent": 2,
    "items": Array [
      Object {
        "raw": "  - item **1**",
        "tokens": Object {
          "value": "item **1**",
        },
      },
      Object {
        "raw": "  - item [link](link-url)",
        "tokens": Object {
          "value": "item [link](link-url)",
        },
      },
    ],
    "meta": Object {
      "identifier": "-",
      "isCheckList": false,
      "ordered": false,
    },
    "type": "list",
  },
  Object {
    "indent": 0,
    "items": Array [
      Object {
        "raw": "- item 3 \`code item\`",
        "tokens": Object {
          "value": "item 3 \`code item\`",
        },
      },
      Object {
        "raw": "- item 4",
        "tokens": Object {
          "value": "item 4",
        },
      },
    ],
    "meta": Object {
      "identifier": "-",
      "isCheckList": false,
      "ordered": false,
    },
    "type": "list",
  },
]
`;

exports[`lexer list should tokenize a valid ordered list 1`] = `
Array [
  Object {
    "indent": 0,
    "items": Array [
      Object {
        "raw": "1. item **1**",
        "tokens": Object {
          "count": "1",
          "value": "item **1**",
        },
      },
      Object {
        "raw": "1. item [link](link-url)",
        "tokens": Object {
          "count": "1",
          "value": "item [link](link-url)",
        },
      },
      Object {
        "raw": "1. item 3 \`code item\`",
        "tokens": Object {
          "count": "1",
          "value": "item 3 \`code item\`",
        },
      },
    ],
    "meta": Object {
      "identifier": null,
      "isCheckList": false,
      "ordered": true,
    },
    "type": "list",
  },
]
`;

exports[`lexer list should tokenize a valid un-ordered list 1`] = `
Array [
  Object {
    "indent": 0,
    "items": Array [
      Object {
        "raw": "- item **1**",
        "tokens": Object {
          "value": "item **1**",
        },
      },
      Object {
        "raw": "- item [link](link-url)",
        "tokens": Object {
          "value": "item [link](link-url)",
        },
      },
      Object {
        "raw": "- item 3 \`code item\`",
        "tokens": Object {
          "value": "item 3 \`code item\`",
        },
      },
    ],
    "meta": Object {
      "identifier": "-",
      "isCheckList": false,
      "ordered": false,
    },
    "type": "list",
  },
]
`;

exports[`lexer list should tokenize list combination 1`] = `
Array [
  Object {
    "indent": 0,
    "items": Array [
      Object {
        "raw": "- one",
        "tokens": Object {
          "value": "one",
        },
      },
      Object {
        "raw": "- two",
        "tokens": Object {
          "value": "two",
        },
      },
    ],
    "meta": Object {
      "identifier": "-",
      "isCheckList": false,
      "ordered": false,
    },
    "type": "list",
  },
  Object {
    "indent": 0,
    "items": Array [
      Object {
        "raw": "1. one",
        "tokens": Object {
          "count": "1",
          "value": "one",
        },
      },
      Object {
        "raw": "2. two",
        "tokens": Object {
          "count": "2",
          "value": "two",
        },
      },
    ],
    "meta": Object {
      "identifier": null,
      "isCheckList": false,
      "ordered": true,
    },
    "type": "list",
  },
  Object {
    "indent": 0,
    "items": Array [
      Object {
        "raw": "- [ ] c empty",
        "tokens": Object {
          "isChecked": false,
          "value": "c empty",
        },
      },
      Object {
        "raw": "- [x] c checked",
        "tokens": Object {
          "isChecked": true,
          "value": "c checked",
        },
      },
    ],
    "meta": Object {
      "identifier": "-",
      "isCheckList": true,
      "ordered": false,
    },
    "type": "list",
  },
  Object {
    "indent": 0,
    "items": Array [
      Object {
        "raw": "1. [ ] c empty",
        "tokens": Object {
          "count": "1",
          "isChecked": false,
          "value": "c empty",
        },
      },
      Object {
        "raw": "1. [x] c checked",
        "tokens": Object {
          "count": "1",
          "isChecked": true,
          "value": "c checked",
        },
      },
    ],
    "meta": Object {
      "identifier": null,
      "isCheckList": true,
      "ordered": true,
    },
    "type": "list",
  },
]
`;

exports[`lexer paragraph should be deep tokenized 1`] = `
Array [
  Object {
    "indent": 0,
    "raw": "some normal and **bold with * gem** but pure *italics* is alos there baby now ~~coming~~hola amigons~~strike~~ wooo lala what about blazing *********here baby ~~~~~~~~~baby \`baby\`\`\`[[[[[[[[[[[[[[[l]]]]int](href)[link](href)\`\`\`\`\`\`\`\`\`\`",
    "type": "paragraph",
    "value": "some normal and **bold with * gem** but pure *italics* is alos there baby now ~~coming~~hola amigons~~strike~~ wooo lala what about blazing *********here baby ~~~~~~~~~baby \`baby\`\`\`[[[[[[[[[[[[[[[l]]]]int](href)[link](href)\`\`\`\`\`\`\`\`\`\`",
  },
]
`;

exports[`lexer paragraph should be deep tokenized 2`] = `
Array [
  Object {
    "indent": 0,
    "raw": "a paragraph of <u>words</u> \`first code\` normal text here \`code body\` *first italics* here me crying *italic body* here me crying **first bolds** some normal again **bold body** [Kiran Parajuli](https://kiranparajuli.com.np) ~~strikes body~~ here some",
    "type": "paragraph",
    "value": "a paragraph of <u>words</u> \`first code\` normal text here \`code body\` *first italics* here me crying *italic body* here me crying **first bolds** some normal again **bold body** [Kiran Parajuli](https://kiranparajuli.com.np) ~~strikes body~~ here some",
  },
]
`;

exports[`lexer paragraph should be deep tokenized 3`] = `
Array [
  Object {
    "indent": 0,
    "raw": "now with __underlined text__ within some ___underl_ined_text___",
    "type": "paragraph",
    "value": "now with __underlined text__ within some ___underl_ined_text___",
  },
]
`;

exports[`lexer quote should deep tokenize quote with multiple depth 1`] = `
Array [
  Object {
    "depth": 1,
    "indent": 0,
    "raw": "> > quote **one** with *two*",
    "type": "quote",
    "value": "quote **one** with *two*",
  },
]
`;

exports[`lexer quote should deep tokenize quote with multiple depth 2`] = `
Array [
  Object {
    "depth": 2,
    "indent": 2,
    "raw": "  > > > quote \`four\` with ~~five~~",
    "type": "quote",
    "value": "quote \`four\` with ~~five~~",
  },
]
`;

exports[`lexer quote should deep tokenize quote with multiple depth 3`] = `
Array [
  Object {
    "depth": 3,
    "indent": 0,
    "raw": "> > > > quote [link-title](link-url) with *two*",
    "type": "quote",
    "value": "quote [link-title](link-url) with *two*",
  },
]
`;

exports[`lexer quote should deep tokenize quote with zero depth 1`] = `
Array [
  Object {
    "depth": 0,
    "indent": 0,
    "raw": "> quote **one** with *two*",
    "type": "quote",
    "value": "quote **one** with *two*",
  },
]
`;

exports[`lexer quote should deep tokenize quote with zero depth 2`] = `
Array [
  Object {
    "depth": 0,
    "indent": 2,
    "raw": "  > quote \`four\` with ~~five~~",
    "type": "quote",
    "value": "quote \`four\` with ~~five~~",
  },
]
`;

exports[`lexer quote should deep tokenize quote with zero depth 3`] = `
Array [
  Object {
    "depth": 0,
    "indent": 0,
    "raw": "> quote [link-title](link-url) with *two*",
    "type": "quote",
    "value": "quote [link-title](link-url) with *two*",
  },
]
`;

exports[`lexer quote should parse multiline quote with the same depth and indent 1`] = `
Array [
  Object {
    "depth": 1,
    "indent": 0,
    "tokens": Array [
      "one",
      "two",
      "> three",
      "four",
      "> five",
      "> six",
    ],
    "type": "quote",
  },
]
`;

exports[`lexer strikes should be deep tokenized 1`] = `
Array [
  Object {
    "indent": 0,
    "raw": "~~strikes with ~ gem and \`code\` and **bold** and *italics* and [link](https://kiranparajuli.com.np)~~",
    "type": "paragraph",
    "value": "~~strikes with ~ gem and \`code\` and **bold** and *italics* and [link](https://kiranparajuli.com.np)~~",
  },
]
`;

exports[`lexer strikes should match the consecutive occurrences 1`] = `
Array [
  Object {
    "indent": 0,
    "raw": "~~first strikes~~ ~~second strikes~~ ~~third strikes~~",
    "type": "paragraph",
    "value": "~~first strikes~~ ~~second strikes~~ ~~third strikes~~",
  },
]
`;

exports[`lexer table is not a table false separator 1`] = `
Array [
  Object {
    "indent": 0,
    "rows": Array [
      Array [
        Object {
          "raw": " column 1 ",
          "value": "column 1",
        },
        Object {
          "raw": " column 2 ",
          "value": "column 2",
        },
      ],
      Array [
        Object {
          "raw": " row 1 c1 ",
          "value": "row 1 c1",
        },
        Object {
          "raw": " row 1 c2 ",
          "value": "row 1 c2",
        },
      ],
    ],
    "type": "table",
  },
]
`;

exports[`lexer table is not a table only header 1`] = `
Array [
  Object {
    "indent": 0,
    "raw": "| column 1 | column 2 |",
    "type": "paragraph",
    "value": "| column 1 | column 2 |",
  },
]
`;

exports[`lexer table is not a table only header and separator 1`] = `
Array [
  Object {
    "indent": 0,
    "raw": "| column 1 | column 2 ||---|---|",
    "type": "paragraph",
    "value": "| column 1 | column 2 ||---|---|",
  },
]
`;

exports[`lexer table is not a table other tokens in between 1 1`] = `
Array [
  Object {
    "indent": 0,
    "raw": "| column 1 | column 2 |",
    "type": "paragraph",
    "value": "| column 1 | column 2 |",
  },
  Object {
    "type": "new-line",
  },
  Object {
    "indent": 0,
    "raw": "|---|---|| row 1 c1 | row 1 c2 |",
    "type": "paragraph",
    "value": "|---|---|| row 1 c1 | row 1 c2 |",
  },
]
`;

exports[`lexer table is not a table other tokens in between 2 1`] = `
Array [
  Object {
    "indent": 0,
    "raw": "| column 1 | column 2 ||---|---|",
    "type": "paragraph",
    "value": "| column 1 | column 2 ||---|---|",
  },
  Object {
    "type": "new-line",
  },
  Object {
    "indent": 0,
    "raw": "| row 1 c1 | row 1 c2 |",
    "type": "paragraph",
    "value": "| row 1 c1 | row 1 c2 |",
  },
]
`;

exports[`lexer table is not a table other tokens in between 3 1`] = `
Array [
  Object {
    "indent": 0,
    "rows": Array [
      Array [
        Object {
          "raw": " column 1 ",
          "value": "column 1",
        },
        Object {
          "raw": " column 2 ",
          "value": "column 2",
        },
      ],
      Array [
        Object {
          "raw": " row 1 c1 ",
          "value": "row 1 c1",
        },
        Object {
          "raw": " row 1 c2 ",
          "value": "row 1 c2",
        },
      ],
    ],
    "type": "table",
  },
  Object {
    "type": "new-line",
  },
  Object {
    "indent": 0,
    "raw": "| row 2 c1 | row 2 c2 |",
    "type": "paragraph",
    "value": "| row 2 c1 | row 2 c2 |",
  },
]
`;

exports[`lexer table table cell count cell count should break the table 1 1`] = `
Array [
  Object {
    "indent": 0,
    "rows": Array [
      Array [
        Object {
          "raw": " column 1 ",
          "value": "column 1",
        },
        Object {
          "raw": " column 2 ",
          "value": "column 2",
        },
      ],
      Array [
        Object {
          "raw": " row 1 c1 ",
          "value": "row 1 c1",
        },
        Object {
          "raw": " row 1 c2 ",
          "value": "row 1 c2",
        },
      ],
    ],
    "type": "table",
  },
  Object {
    "indent": 0,
    "raw": "| row 2 c1 |",
    "type": "paragraph",
    "value": "| row 2 c1 |",
  },
]
`;

exports[`lexer table table cell count cell count should break the table 2 1`] = `
Array [
  Object {
    "indent": 0,
    "rows": Array [
      Array [
        Object {
          "raw": " column 1 ",
          "value": "column 1",
        },
        Object {
          "raw": " column 2 ",
          "value": "column 2",
        },
      ],
      Array [
        Object {
          "raw": " row 1 c1 ",
          "value": "row 1 c1",
        },
        Object {
          "raw": " row 1 c2 ",
          "value": "row 1 c2",
        },
      ],
    ],
    "type": "table",
  },
  Object {
    "indent": 0,
    "rows": Array [
      Array [
        Object {
          "raw": " column 1 ",
          "value": "column 1",
        },
      ],
      Array [
        Object {
          "raw": " row 1 c1 ",
          "value": "row 1 c1",
        },
      ],
    ],
    "type": "table",
  },
]
`;

exports[`lexer table table heading-body separator should parse a table 1`] = `
Array [
  Object {
    "indent": 0,
    "rows": Array [
      Array [
        Object {
          "raw": " column 1 ",
          "value": "column 1",
        },
        Object {
          "raw": " column 2 ",
          "value": "column 2",
        },
      ],
      Array [
        Object {
          "raw": " row 1 c1 ",
          "value": "row 1 c1",
        },
        Object {
          "raw": " row 1 c2 ",
          "value": "row 1 c2",
        },
      ],
      Array [
        Object {
          "raw": " row 2 c1 ",
          "value": "row 2 c1",
        },
        Object {
          "raw": " row 2 c2 ",
          "value": "row 2 c2",
        },
      ],
    ],
    "type": "table",
  },
]
`;

exports[`lexer table table heading-body separator should parse a table 2`] = `
Array [
  Object {
    "indent": 0,
    "rows": Array [
      Array [
        Object {
          "raw": " column 1 ",
          "value": "column 1",
        },
        Object {
          "raw": " column 2 ",
          "value": "column 2",
        },
      ],
      Array [
        Object {
          "raw": " row 1 c1 ",
          "value": "row 1 c1",
        },
        Object {
          "raw": " row 1 c2 ",
          "value": "row 1 c2",
        },
      ],
      Array [
        Object {
          "raw": " row 2 c1 ",
          "value": "row 2 c1",
        },
        Object {
          "raw": " row 2 c2 ",
          "value": "row 2 c2",
        },
      ],
    ],
    "type": "table",
  },
]
`;

exports[`lexer table table indent different indent header -> separator 1`] = `
Array [
  Object {
    "indent": 0,
    "raw": "| column 1 | column 2 |  |---|---|| row 1 c1 | row 1 c2 |",
    "type": "paragraph",
    "value": "| column 1 | column 2 ||---|---|| row 1 c1 | row 1 c2 |",
  },
]
`;

exports[`lexer table table indent different indent header, separator -> body row 1`] = `
Array [
  Object {
    "indent": 2,
    "raw": "  | column 1 | column 2 |  |---|---|| row 1 c1 | row 1 c2 |",
    "type": "paragraph",
    "value": "  | column 1 | column 2 ||---|---|| row 1 c1 | row 1 c2 |",
  },
]
`;

exports[`lexer table table indent indent should break the table 1 1`] = `
Array [
  Object {
    "indent": 2,
    "rows": Array [
      Array [
        Object {
          "raw": " column 1 ",
          "value": "column 1",
        },
        Object {
          "raw": " column 2 ",
          "value": "column 2",
        },
      ],
      Array [
        Object {
          "raw": " row 1 c1 ",
          "value": "row 1 c1",
        },
        Object {
          "raw": " row 1 c2 ",
          "value": "row 1 c2",
        },
      ],
    ],
    "type": "table",
  },
  Object {
    "indent": 0,
    "raw": "| row 2 c1 | row 2 c2 |",
    "type": "paragraph",
    "value": "| row 2 c1 | row 2 c2 |",
  },
]
`;

exports[`lexer table table indent indent should break the table 2 1`] = `
Array [
  Object {
    "indent": 2,
    "rows": Array [
      Array [
        Object {
          "raw": " column 1 ",
          "value": "column 1",
        },
        Object {
          "raw": " column 2 ",
          "value": "column 2",
        },
      ],
      Array [
        Object {
          "raw": " row 1 c1 ",
          "value": "row 1 c1",
        },
        Object {
          "raw": " row 1 c2 ",
          "value": "row 1 c2",
        },
      ],
    ],
    "type": "table",
  },
  Object {
    "indent": 0,
    "rows": Array [
      Array [
        Object {
          "raw": " column 1 ",
          "value": "column 1",
        },
        Object {
          "raw": " column 2 ",
          "value": "column 2",
        },
      ],
      Array [
        Object {
          "raw": " row 1 c1 ",
          "value": "row 1 c1",
        },
        Object {
          "raw": " row 1 c2 ",
          "value": "row 1 c2",
        },
      ],
    ],
    "type": "table",
  },
]
`;

exports[`lexer table table indent the indented table 1`] = `
Array [
  Object {
    "indent": 2,
    "rows": Array [
      Array [
        Object {
          "raw": " column 1 ",
          "value": "column 1",
        },
        Object {
          "raw": " column 2 ",
          "value": "column 2",
        },
      ],
      Array [
        Object {
          "raw": " row 1 c1 ",
          "value": "row 1 c1",
        },
        Object {
          "raw": " row 1 c2 ",
          "value": "row 1 c2",
        },
      ],
    ],
    "type": "table",
  },
]
`;
